--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
         android:networkSecurityConfig="@xml/network_security_config"
         android:usesCleartextTraffic="true"
         android:theme="@style/Theme.JPMPOSBlade">
+        
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -29,10 +30,21 @@
             android:theme="@style/Theme.JPMPOSBlade">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
+        <activity
+            android:name=".base.PermissionRationaleActivity"
+            android:exported="false"
+            android:theme="@style/Theme.JPMPOSBlade"
+            android:windowSoftInputMode="adjustResize" />
+            
+        <activity
+            android:name=".base.PermissionDeniedActivity"
+            android:exported="false"
+            android:theme="@style/Theme.JPMPOSBlade"
+            android:windowSoftInputMode="adjustResize" />
         
         <service
             android:name=".websocket.WebSocketNotificationService"
